--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,52 +1,30 @@
 @charset "utf-8";
 
 @font-face {
-  font-family: "NotoSansKR";
-  font-weight: 100;
-  src: url(../fonts/NotoSansKR-Thin.woff) format(woff);
-}
-@font-face {
-  font-family: "NotoSansKR";
-  font-weight: 100;
-  src: url(../fonts/NotoSansKR-Thin.woff) format(woff);
-}
-@font-face {
-  font-family: "NotoSansKR";
-  font-weight: 200;
-  src: url(../fonts/NotoSansKR-ExtraLight.woff) format(woff);
-}
-@font-face {
-  font-family: "NotoSansKR";
-  font-weight: 300;
-  src: url(../fonts/NotoSansKR-Light.woff) format(woff);
-}
-@font-face {
-  font-family: "NotoSansKR";
+  font-family: "Noto Sans KR";
+  font-style: normal;
   font-weight: 400;
-  src: url(../fonts/NotoSansKR-Regular.woff) format(woff);
+  src: url(../fonts/NotoSansKr/NotoSansKR-Regular.woff2) format("woff2"), url(../fonts/NotoSansKr/NotoSansKR-Regular.woff) format("woff"),
+    url(../fonts/NotoSansKr/NotoSansKR-Regular.otf) format("opentype");
 }
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: "Noto Sans KR";
+  font-style: normal;
   font-weight: 500;
-  src: url(../fonts/NotoSansKR-Medium.woff) format(woff);
+  src: url(../fonts/NotoSansKr/NotoSansKR-Medium.woff2) format("woff2"), url(../fonts/NotoSansKr/NotoSansKR-Medium.woff) format("woff"),
+    url(../fonts/NotoSansKr/NotoSansKR-Medium.otf) format("opentype");
 }
 @font-face {
-  font-family: "NotoSansKR";
-  font-weight: 600;
-  src: url(../fonts/NotoSansKR-SemiBold.woff) format(woff);
-}
-@font-face {
-  font-family: "NotoSansKR";
+  font-family: "Noto Sans KR";
+  font-style: normal;
   font-weight: 700;
-  src: url(../fonts/NotoSansKR-Bold.woff) format(woff);
+  src: url(../fonts/NotoSansKr/NotoSansKR-Bold.woff2) format("woff2"), url(../fonts/NotoSansKr/NotoSansKR-Bold.woff) format("woff"),
+    url(../fonts/NotoSansKr/NotoSansKR-Bold.otf) format("opentype");
 }
 @font-face {
-  font-family: "NotoSansKR";
-  font-weight: 800;
-  src: url(../fonts/NotoSansKR-ExtraBold.woff) format(woff);
-}
-@font-face {
-  font-family: "NotoSansKR";
+  font-family: "Noto Sans KR";
+  font-style: normal;
   font-weight: 900;
-  src: url(../fonts/NotoSansKR-Black.woff) format(woff);
+  src: url(../fonts/NotoSansKr/NotoSansKR-Black.woff2) format("woff2"), url(../fonts/NotoSansKr/NotoSansKR-Black.woff) format("woff"),
+    url(../fonts/NotoSansKr/NotoSansKR-Black.otf) format("opentype");
 }
