--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,6 +16,13 @@ body {
   background-color: var(--bgColor);
 }
 
+.mobile {
+  display: none;
+}
+.pc {
+  display: block;
+}
+
 .loading {
   /* display: none; */
   position: fixed;
@@ -52,14 +59,73 @@ select {
   height: 4.8rem;
   font-size: 1.6rem;
 }
+
+/* #################### header ##################### */
 .header {
   display: grid;
   grid-template-columns: 23rem 1fr 23rem;
   align-items: center;
-  padding: 0 3vw;
+  padding: 2rem 3vw;
   img {
     width: 100%;
-    max-width: 9rem;
+    max-width: 5rem;
+  }
+  h1 {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  .s-box {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 1rem;
+    margin-right: 1rem;
+  }
+  .m-search {
+    width: 3.4rem;
+    height: 3.5rem;
+    background: url(../image/icon_search.png) no-repeat;
+    background-size: 3.4rem auto;
+    text-align: right;
+    cursor: pointer;
+    &.active {
+      width: 3rem;
+      height: 3rem;
+      background: url(../image/icon_close.png) no-repeat center / cover;
+      background-size: 3rem auto;
+    }
+  }
+  .sel-div {
+    display: flex;
+    justify-content: center;
+    gap: 0.8rem;
+    input,
+    select {
+      border-radius: 25px;
+    }
+    .select-type select,
+    .date-sch input {
+      width: 11rem;
+      border: 1px solid var(--yellowff);
+    }
+    .search-div {
+      display: flex;
+      gap: 0.4rem;
+      input {
+        width: 35.8rem;
+        background-color: var(--yellowff);
+      }
+      button {
+        padding: 0 2rem;
+        height: 4.8rem;
+        background-color: var(--purplec8);
+        color: var(--whitefd);
+        font-size: 1.6rem;
+        border-radius: 25px;
+        cursor: pointer;
+      }
+    }
   }
   .like {
     display: flex;
@@ -68,46 +134,15 @@ select {
       display: block;
       width: 5rem;
       height: 4rem;
-      background: url(../image/like_on.PNG) no-repeat center / cover;
+      background: url(../image/like.PNG) no-repeat center / cover;
       background-size: 5rem auto;
     }
   }
 }
 
+/* #################### main - movie list ##################### */
 .main {
-  margin-top: 6.4rem;
-}
-
-.selDiv {
-  display: flex;
-  justify-content: center;
-  gap: 0.8rem;
-  input,
-  select {
-    border-radius: 25px;
-  }
-}
-
-.selectType select,
-.dateSch input {
-  width: 11rem;
-  border: 1px solid var(--yellowff);
-}
-
-.searchDiv {
-  input {
-    width: 35.8rem;
-    background-color: var(--yellowff);
-  }
-  button {
-    padding: 0 2rem;
-    height: 4.8rem;
-    background-color: var(--purplec8);
-    color: var(--whitefd);
-    font-size: 1.6rem;
-    border-radius: 25px;
-    cursor: pointer;
-  }
+  margin-top: 4.4rem;
 }
 
 .movie-results-section {
@@ -142,19 +177,34 @@ select {
   } */
   .movie-list {
     display: grid;
-    /* grid-template-columns: repeat(5, 1fr); */
     justify-items: center;
     gap: 4rem;
     padding: 1.7rem;
     grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
     li {
-      padding: 2rem 0;
+      position: relative;
+      margin: 2rem 0;
       a {
         display: block;
       }
       img,
       p {
         border-radius: 31px;
+      }
+      .like-chk {
+        position: absolute;
+        top: 1.3rem;
+        right: 1.8rem;
+        display: inline-block;
+        width: 3rem;
+        height: 3rem;
+        background: url(../image/like_off.PNG) no-repeat;
+        background-size: 3rem auto;
+        z-index: 1;
+        &.active {
+          background: url(../image/like_on.PNG) no-repeat;
+          background-size: 3rem auto;
+        }
       }
       img {
         display: block;
@@ -163,7 +213,6 @@ select {
         height: 35.5rem;
         object-fit: cover;
         box-shadow: 1px 1px 10px var(--blue2f);
-        /* background: url(../image/noImage.png) no-repeat center / cover; */
       }
       p {
         max-width: 24rem;
@@ -192,11 +241,6 @@ select {
     li {
       display: grid;
       grid-template-columns: 34rem auto;
-      /* .imgDiv {
-        width: 30rem;
-        height: 44.5rem;
-        background: url(../image/noImage.png) no-repeat center / cover;
-      } */
       .movie-info {
         .title {
           font-size: 5.4rem;
@@ -255,9 +299,11 @@ select {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
     img {
       display: inline-block;
-      max-width: 7rem;
+      max-width: 4rem;
     }
     span {
       font-size: 2rem;
@@ -282,6 +328,33 @@ select {
   body {
     font-size: 9px;
   }
+  .mobile {
+    display: block;
+  }
+  .pc {
+    display: none;
+  }
+  .header {
+    grid-template-columns: auto 1fr auto;
+    .sel-div {
+      display: none;
+      &.active {
+        display: flex;
+        justify-content: flex-end;
+        gap: 0.4rem;
+      }
+      .select-type select,
+      .date-sch input {
+        width: 8.8rem;
+      }
+      .search-div {
+        input {
+          width: 100%;
+        }
+      }
+    }
+  }
+
   #detailWrap {
     & .movie-details {
       li {
@@ -298,6 +371,16 @@ select {
   html,
   body {
     font-size: 8px;
+  }
+
+  .s-box {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+  }
+  .select-type,
+  .date-sch {
+    display: none;
   }
 
   .footer {
