--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,19 +12,34 @@
   --black00: #000;
 }
 
+html,
+body {
+  @media (max-width: 1024px) {
+    font-size: 9px;
+  }
+  @media (max-width: 768px) {
+    font-size: 8px;
+  }
+}
+
 body {
   background-color: var(--bgColor);
 }
 
 .mobile {
   display: none;
+  @media (max-width: 1024px) {
+    display: block;
+  }
 }
 .pc {
   display: block;
+  @media (max-width: 1024px) {
+    display: none;
+  }
 }
 
 .loading {
-  /* display: none; */
   position: fixed;
   z-index: 9999;
   top: 0;
@@ -36,10 +51,10 @@ body {
     position: relative;
     top: 50%;
     margin: auto;
-    width: 40px;
-    height: 40px;
-    border: 5px solid var(--greenb5);
-    border-top: 5px solid transparent;
+    width: 7rem;
+    height: 7rem;
+    border: 9px solid var(--greenb5);
+    border-top: 9px solid transparent;
     border-radius: 50%;
     animation: rotate 1s linear infinite;
   }
@@ -65,7 +80,27 @@ select {
   display: grid;
   grid-template-columns: 23rem 1fr 23rem;
   align-items: center;
-  padding: 2rem 3vw;
+  padding: 2rem 3rem;
+  @media (max-width: 1240px) {
+    grid-template-columns: 23rem 1fr auto;
+  }
+  @media (max-width: 1024px) {
+    grid-template-columns: auto 1fr auto;
+    .s-box {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      gap: 1rem;
+      margin-right: 1rem;
+    }
+  }
+  @media (max-wdith: 768px) {
+    .header .s-box {
+      display: flex;
+      align-items: center;
+      flex-direction: row-reverse;
+    }
+  }
   img {
     width: 100%;
     max-width: 5rem;
@@ -74,13 +109,6 @@ select {
     display: flex;
     align-items: center;
     gap: 1rem;
-  }
-  .s-box {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    gap: 1rem;
-    margin-right: 1rem;
   }
   .m-search {
     width: 3.4rem;
@@ -100,14 +128,32 @@ select {
     display: flex;
     justify-content: center;
     gap: 0.8rem;
+    @media (max-width: 1024px) {
+      display: none;
+      &.active {
+        display: flex;
+        justify-content: flex-end;
+        gap: 0.4rem;
+      }
+    }
     input,
     select {
       border-radius: 25px;
     }
+    @media (max-width: 768px) {
+      .select-type,
+      .date-sch {
+        display: none;
+      }
+    }
     .select-type select,
     .date-sch input {
       width: 11rem;
+      text-align: center;
       border: 1px solid var(--yellowff);
+      @media (max-width: 1024px) {
+        width: 8.8rem;
+      }
     }
     .search-div {
       display: flex;
@@ -115,6 +161,9 @@ select {
       input {
         width: 35.8rem;
         background-color: var(--yellowff);
+        @media (max-width: 1024px) {
+          width: 100%;
+        }
       }
       button {
         padding: 0 2rem;
@@ -140,14 +189,74 @@ select {
   }
 }
 
+.container {
+  margin: auto;
+  max-width: 1920px;
+}
 /* #################### main - movie list ##################### */
 .main {
+  padding: 0 2.3rem;
+}
+.mt44 {
   margin-top: 4.4rem;
+}
+.movie-visual-section {
+  padding: 0 3rem;
+  @media (max-width: 1024px) {
+    padding: 0 0;
+  }
+  .visual {
+    position: relative;
+    img {
+      margin: auto;
+      width: 100%;
+      height: 74.1rem;
+      @media (max-width: 1024px) {
+        height: 100%;
+      }
+    }
+    &::after {
+      position: absolute;
+      right: -3rem;
+      bottom: 4rem;
+      display: block;
+      content: "";
+      width: 54rem;
+      height: 53rem;
+      background: url(../image/visual_person.png) no-repeat center / cover;
+      @media (max-width: 1240px) {
+        width: 50rem;
+        height: 49rem;
+      }
+      @media (max-width: 1024px) {
+        display: none;
+      }
+    }
+    .visual-txt {
+      position: absolute;
+      top: 11rem;
+      left: 7rem;
+      p {
+        padding-bottom: 1.5rem;
+        font-size: 6rem;
+        font-weight: bold;
+        letter-spacing: 0.5rem;
+      }
+      span {
+        font-size: 4rem;
+        letter-spacing: 2.3rem;
+        color: var(--whitefd);
+      }
+    }
+  }
 }
 
 .movie-results-section {
-  margin: 0 2.3vw;
+  margin-top: 22.2rem;
   background-color: var(--whitefd);
+  @media (max-width: 1024px) {
+    margin-top: 12.2rem;
+  }
   .noSearch {
     padding: 7.7rem 0;
     font-size: 3rem;
@@ -179,8 +288,8 @@ select {
     display: grid;
     justify-items: center;
     gap: 4rem;
-    padding: 1.7rem;
-    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+    padding: 1.7rem 6rem;
+    grid-template-columns: repeat(auto-fill, minmax(28rem, 1fr));
     li {
       position: relative;
       margin: 2rem 0;
@@ -191,31 +300,16 @@ select {
       p {
         border-radius: 31px;
       }
-      .like-chk {
-        position: absolute;
-        top: 1.3rem;
-        right: 1.8rem;
-        display: inline-block;
-        width: 3rem;
-        height: 3rem;
-        background: url(../image/like_off.PNG) no-repeat;
-        background-size: 3rem auto;
-        z-index: 1;
-        &.active {
-          background: url(../image/like_on.PNG) no-repeat;
-          background-size: 3rem auto;
-        }
-      }
       img {
         display: block;
         margin-bottom: 1.9rem;
-        width: 24rem;
+        width: 28rem;
         height: 35.5rem;
         object-fit: cover;
         box-shadow: 1px 1px 10px var(--blue2f);
       }
       p {
-        max-width: 24rem;
+        max-width: 28rem;
         padding: 1.4rem 1rem;
         font-size: 1.7rem;
         font-weight: 600;
@@ -228,19 +322,41 @@ select {
   }
 }
 
+.like-chk {
+  position: absolute;
+  top: 1.3rem;
+  right: 1.8rem;
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  background: url(../image/like_off.PNG) no-repeat;
+  background-size: 3rem auto;
+  z-index: 1;
+  &.active {
+    background: url(../image/like_on.PNG) no-repeat;
+    background-size: 3rem auto;
+  }
+}
+
+/* ####################  movie details list ##################### */
+
 #detailWrap {
-  .detailDiv {
-    padding: 0 2.3vw;
+  .movie-detail-section {
+    padding: 0 2.3rem;
   }
   .movie-details {
     padding: 2rem;
-    margin: 0 auto 13.5rem auto;
+    margin: auto;
     width: 100%;
-    max-width: 128rem;
+    max-width: 134rem;
     background: var(--whitefd);
     li {
       display: grid;
       grid-template-columns: 34rem auto;
+      @media (max-width: 1024px) {
+        grid-template-columns: auto;
+        gap: 2.4rem;
+      }
       .movie-info {
         .title {
           font-size: 5.4rem;
@@ -287,12 +403,62 @@ select {
           }
         }
       }
+      @media (max-width: 1024px) {
+        .imgDiv {
+          text-align: center;
+        }
+      }
     }
   }
 }
 
+/* ####################  movie like list ##################### */
+
+#likeWrap {
+  .movie-like-section {
+    /* height: calc(100vh - 12.123rem - 11.998rem - 8rem); */
+    .like-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(34rem, 1fr));
+      justify-items: center;
+      row-gap: 2rem;
+      column-gap: 1rem;
+      padding: 0 4rem;
+      li {
+        position: relative;
+        img {
+          width: 34rem;
+          height: 24rem;
+          object-fit: cover;
+          border-radius: 31px;
+        }
+      }
+      a {
+        display: block;
+      }
+      .movie-title {
+        padding: 0.8rem;
+        font-size: 1.8rem;
+        text-align: center;
+      }
+    }
+    .saved-title {
+      padding: 0 0 5rem 4rem;
+      font-size: 3.2rem;
+      font-weight: 600;
+    }
+  }
+  .no-like-txt {
+    font-size: 3rem;
+    font-weight: 600;
+    text-align: center;
+  }
+}
+
+/* #################### footer ##################### */
+
 .footer {
-  padding-bottom: 2rem;
+  padding-bottom: 5rem;
   margin-top: 8rem;
   /* background-color: var(--whitefd); */
   .f-logo {
@@ -315,76 +481,7 @@ select {
     justify-content: center;
     gap: 3rem;
     font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 1240px) {
-  .header {
-    grid-template-columns: 23rem 1fr auto;
-  }
-}
-@media (max-width: 1024px) {
-  html,
-  body {
-    font-size: 9px;
-  }
-  .mobile {
-    display: block;
-  }
-  .pc {
-    display: none;
-  }
-  .header {
-    grid-template-columns: auto 1fr auto;
-    .sel-div {
-      display: none;
-      &.active {
-        display: flex;
-        justify-content: flex-end;
-        gap: 0.4rem;
-      }
-      .select-type select,
-      .date-sch input {
-        width: 8.8rem;
-      }
-      .search-div {
-        input {
-          width: 100%;
-        }
-      }
-    }
-  }
-
-  #detailWrap {
-    & .movie-details {
-      li {
-        grid-template-columns: auto;
-        gap: 2.4rem;
-        .imgDiv {
-          text-align: center;
-        }
-      }
-    }
-  }
-}
-@media (max-width: 768px) {
-  html,
-  body {
-    font-size: 8px;
-  }
-
-  .s-box {
-    display: flex;
-    align-items: center;
-    flex-direction: row-reverse;
-  }
-  .select-type,
-  .date-sch {
-    display: none;
-  }
-
-  .footer {
-    .copywriter {
+    @media (max-width: 768px) {
       flex-direction: column;
     }
   }
